Doc: add swagger for new body
